--- a/Lesson_4/README
+++ b/Lesson_4/README
@@ -1,1 +1,6 @@
-store the practise code of MXNet Lessson 4, consists of ...
+Lesson 4 concludes classical network: 
+AlexNet;
+VGG;
+GoogLeNet;
+ResNet;
+DenseNet
